# QtScope

./: .gitignore  CMakeLists.txt  README.md  build.sh
__MACOSX/: ._CMakeLists.txt  ._README.md
__MACOSX/src/: ._scpScopeView.cpp
src/: CMakeLists_FTDI.txt  generateTestData.cpp  main.cpp  scpAudioInputSource.cpp  scpAudioInputSource.h  scpDataSource.h  scpFTDIInterface.cpp  scpFTDIInterface.h  scpFtdiSource.cpp  scpFtdiSource.h  scpMainWindow.cpp  scpMainWindow.h  scpMessageWaveSource.cpp  scpMessageWaveSource.h  scpScopeView.cpp  scpScopeView.h  scpSignalGeneratorSource.cpp  scpSignalGeneratorSource.h  scpSimulatedAcquisitionSource.cpp  scpSimulatedAcquisitionSource.h  scpSimulatedGeneratorSource.cpp  scpSimulatedGeneratorSource.h  scpTerminalController.cpp  scpTerminalController.h  scpThroughputMonitor.cpp  scpThroughputMonitor.h  scpUsbReadController.cpp  scpUsbReadController.h  scpUsbWriteController.cpp  scpUsbWriteController.h  scpView.h  scpViewTerminal.cpp  scpViewTerminal.h  scpWaveformGenerator.cpp  scpWaveformGenerator.h  testFTDI.cpp
